syntax = "proto3";

message getPlayerByKeyInput { 
    string sPlayerKey = 1;
 }

 message imageObj { 
    string sText = 1;
    string sCaption = 2;
    string sAttribute = 3;
    string sUrl = 4;
  }

 message getPlayerByKeyOutput { 
    string iPlayerId = 1;
    string sAbout = 2;
    string sFullName = 3;
    string sShortName = 4;
    string sCountry = 5;
    imageObj oImg = 6;
    imageObj oJersey = 7;
  }

  message getTeamByKeyInput { 
    string sTeamKey = 1;
 }

 message getTeamByKeyOutput { 
    string iTeamId = 1;
    string sTitle = 2;
    string sAbbr = 3;
    string sCountry = 4;
    imageObj oImg = 5;
  }
message oPlayer { 
  string _id = 1;
  string sShortName = 2;
  string sFirstName = 3;
  string sFullName = 4;
  string sCountry = 5;
  imageObj oImg = 6;
 }

service MatchManagementService {
    rpc getPlayerByKey(getPlayerByKeyInput) returns (getPlayerByKeyOutput) {}
    rpc getTeamByKey(getTeamByKeyInput) returns (getTeamByKeyOutput) {}
}
